chrome/browser/resources/side_panel/read_anything/app/app.css
/* Copyright 2024 The Chromium Authors
 * Use of this source code is governed by a BSD-style license that can be
 * found in the LICENSE file. */

/* #css_wrapper_metadata_start
 * #type=style-lit
 * #import=//read-anything-side-panel.top-chrome/shared/sp_shared_style_lit.css.js
 * #import=//resources/cr_elements/cr_hidden_style_lit.css.js
 * #import=//resources/cr_elements/cr_shared_vars.css.js
 * #include=sp-shared-style-lit cr-hidden-style-lit
 * #scheme=relative
 * #css_wrapper_metadata_end */
:host {
  display: flex;
  flex-direction: column;
  height: 100%;
  --immersive-menu-font: 'Google Sans Text', 'Google Sans', system-ui, sans-serif;
  --immersive-menu-font-size: 13px;
  --immersive-menu-line-height: 20px;
  --immersive-menu-font-weight: 400;
}

:host #appFlexParent {
  flex: 1;
  height: auto;
  min-height: 0;
}

#lineFocus {
  position: absolute;
  top: var(--line-focus-y);
  left: var(--sp-card-block-padding);
  right: var(--sp-card-block-padding);
  height: var(--line-focus-height);
  background-color: var(--line-focus-bg);
  display: var(--line-focus-display);
  /* Darkens the area around this element when it is a window. Does nothing when
     it is a line. */
  box-shadow: var(--line-focus-shadow);
  /* Clip path ensures the box shadow doesn't go beyond the content window. */
  clip-path: inset(var(--line-focus-clip-top) 0 var(--line-focus-clip-bottom) 0 round 12px);
  pointer-events: none;
  z-index: 9997;
}

#empty-state-container {
  background: var(--background-color);
  border-radius: 12px;
  height: 100%;
  margin: 0 8px;
  margin-bottom: var(--sp-card-block-padding);
  min-width: var(--container-min-width);
  overflow: auto;
  padding: 20px;
}

.sp-scroller {
  display: block;
}

/* Provides a fading effect to containerScroller after scrolling. */
.sp-scroller.fade {
  --scrollbar-margin: calc(var(--sp-card-block-padding) * 2);
  --text-top-margin: calc((var(--letter-spacing) + var(--font-size)) / 2);

  /* Fade out the text at the top of the scroller. */
  mask-image: linear-gradient(to bottom, transparent, black var(--text-top-margin)),
  /* Prevent fading from extending to the scrollbar. */
  linear-gradient(to left, black var(--scrollbar-margin),transparent var(--scrollbar-margin));
}

#toolbar-container {
  width: 100%;
}

#appFlexParent {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-x: var(--app-overflow-x);
  width: 100%;
}

#appFlexParent.immersive {
  background-color: var(--background-color);
}

#appFlexParent #containerParent {
  background: var(--background-color);
  display: flex;
  flex-grow:1;
  height: 100%;
  margin-bottom: var(--sp-card-block-padding);
  min-height: 0;
  min-width: var(--container-min-width);
  padding-top: 2px;
  padding-left: var(--sp-card-block-padding);
  padding-right: var(--sp-card-block-padding);
  padding-bottom: var(--sp-card-block-padding);
}

/* Provides vertical and horizontal scrolling */
#appFlexParent #containerScroller {
  align-items: safe center;
  background:transparent;
  display:flex;
  flex: 1 1 0%;
  justify-content: center;
  /* Display the scroll bars in the gutters outside the card. */
  margin-bottom:calc(var(--sp-card-block-padding) * -1);
  margin-right: calc(var(--sp-card-block-padding) * -2);
  overflow: auto;
  padding-bottom: var(--sp-card-block-padding);
  padding-right: calc(var(--sp-card-block-padding) * 2);
}

.sp-scroller::-webkit-scrollbar-track,
#empty-state-container::-webkit-scrollbar-track {
  margin-bottom: 6px;
  margin-top: 6px;
}

/* Hide the scrollbar corner */
#containerScroller::-webkit-scrollbar-corner,
#empty-state-container::-webkit-scrollbar-corner {
  background-color: transparent;
}

/* Set the horizontal scrollbar height to match the gutter space */
#containerScroller::-webkit-scrollbar:horizontal,
#empty-state-container::-webkit-scrollbar:horizontal {
  height: var(--sp-card-block-padding);
}

/* User select should be disabled on the Read Anything panel when Read Aloud
 * is playing audio and enabled otherwise. */
.user-select-disabled-when-speech-active-true {
  user-select: none;
}

.user-select-disabled-when-speech-active-false {
  user-select: auto;
}

#appFlexParent #container {
  background: var(--background-color);
  color: var(--foreground-color);
  font-family: var(--font-family);
  font-size: var(--font-size);
  letter-spacing: var(--letter-spacing);
  line-height: var(--line-height);
  margin: 0 auto;
  max-width: var(--max-width);
  overflow-wrap: break-word;
  padding-left: 20px;
  padding-top: var(--line-focus-padding);
  padding-bottom: var(--line-focus-padding);
  width: 100%; /* Wrap text to width even with horizontal scroll bar */
}

#appFlexParent a:link {
  color: var(--link-color);
}

#appFlexParent a:visited {
  color: var(--visited-link-color);
}

#appFlexParent sp-empty-state {
  display: flex;
  margin: 0 auto 16px auto;
  font-family: var(--font-family);
  letter-spacing: var(--letter-spacing);
  --sp-empty-state-heading-font-size: calc(var(--font-size) * 1.2);
  --sp-empty-state-body-font-size: var(--font-size);

  --sp-empty-state-heading-line-height: var(--line-height);
  --sp-empty-state-body-line-height: var(--line-height);
}

#appFlexParent ::selection {
  background: var(--selection-color);
  color: var(--selection-text-color);
}

#appFlexParent .current-read-highlight {
  background-color: var(--current-highlight-bg-color);
}

@media (forced-colors: active) {
  #appFlexParent .current-read-highlight {
    background-color: Highlight;
    color: HighlightText;
  }
}

#appFlexParent .previous-read-highlight {
  background-color: transparent;
  color: var(--previous-highlight-color);
}

#appFlexParent canvas {
  max-width: 100%;
}

#docs-load-more-button {
  background: var(--color-sys-tonal-container);
  margin: 0 auto;
  border-width: 0;
  width: 10em;
  max-width: 100%;
  height: 3em;
  font-size: var(--font-size);
  color: var(--cr-primary-text-color);
  display: flex;
  justify-content: center;
}

img.distilled-inline-img {
  display: inline;
  vertical-align: middle;
  width: auto;
}

img.distilled-full-width-img {
  display: block;
  width: 100%;
  height: auto;
}

.settings-overlay {
  width: 100vw;
  height: 100vh;
  position: fixed;
  top: 0;
  left: 0;
  background-color: transparent;
  z-index: 9998;
  display: none;
}

